welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:2: error: value update is not a member of Boolean
if (estFaceMur()=false){
    ^Runner:4: error: value update is not a member of Boolean
}else (estFaceMur()=true){
       ^